--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "mocha": "^3.4.1"
   },
   "scripts": {
-    "test": "mocha --harmony_rest_parameters --harmony_destructuring --harmony_default_parameters --recursive ./tests",
-    "examples": "mocha --harmony_rest_parameters --harmony_destructuring --harmony_default_parameters --require ./examples/_bootstrap.js ./examples || true",
-    "coverage": "node --harmony_rest_parameters --harmony_destructuring --harmony_default_parameters ./node_modules/istanbul/lib/cli.js cover _mocha -- --require ./examples/_bootstrap.js --recursive ./examples ./tests || true"
+    "test": "mocha --recursive ./tests",
+    "examples": "mocha --require ./examples/_bootstrap.js ./examples || true",
+    "coverage": "node ./node_modules/istanbul/lib/cli.js cover _mocha -- --require ./examples/_bootstrap.js --recursive ./examples ./tests || true"
   }
 }
