--- a/package.json
+++ b/package.json
@@ -4,20 +4,27 @@
   "description": "URL router for Dobby projects",
   "license": "UNLICENSED",
   "author": "V3Net.cz, s.r.o. <info@v3net.cz> (http://www.v3net.cz)",
+  "typings": "dist/dts/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "dependencies": {
     "deep-equal": "^1.0.1"
   },
   "devDependencies": {
     "@types/deep-equal": "^1.0.1",
     "@types/jest": "^24.0.11",
+    "@zerollup/ts-transform-paths": "^1.7.0",
     "jest": "^24.5.0",
     "mocha": "^3.4.1",
     "prettier": "^1.16.4",
     "ts-jest": "^24.0.0",
     "tslib": "^1.9.3",
+    "ttypescript": "^1.5.6",
     "typescript": "^3.3.3333"
   },
   "scripts": {
+    "build:esm": "ttsc --declaration --declarationDir dist/dts --module es2015 --outDir dist/esm --project tsconfig.lib.json",
+    "build:cjs": "ttsc --module commonjs --outDir dist/cjs --project tsconfig.lib.json",
     "format": "prettier --write \"{src,test}/**/*.ts\" .prettierrc \"*.js\"",
     "test": "jest",
     "test:coverage": "jest --coverage"
