--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,17 +8,10 @@
     "importHelpers": true,
     "esModuleInterop": true,
     "paths": {
-      "~": [
-        "src"
-      ],
-      "~/*": [
-        "src/*"
-      ]
+      "~": ["src"],
+      "~/*": ["src/*"]
     },
     "plugins": [{ "transform": "@zerollup/ts-transform-paths" }]
   },
-  "include": [
-    "src/**/*.ts",
-    "test/**/*.ts"
-  ]
+  "include": ["src/**/*.ts", "test/**/*.ts"]
 }
