--- a/packages/chobot/tsconfig.json
+++ b/packages/chobot/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
     "target": "es2018",
-    "module": "commonjs",
+    "module": "es2015",
     "moduleResolution": "node",
+    "sourceMap": true,
     "strict": true,
     "baseUrl": ".",
     "importHelpers": true,
