--- a/packages/chobot-demo/tsconfig.json
+++ b/packages/chobot-demo/tsconfig.json
@@ -7,7 +7,7 @@
     "rootDir": "src",
     "baseUrl": "./",
     "paths": {
-      "chobot": ["../chobot/src/index.ts"],
+      "chobot/*": ["../chobot/src/*"],
     }
   },
   "references": [
