--- a/packages/chobot-demo/package.json
+++ b/packages/chobot-demo/package.json
@@ -6,11 +6,17 @@
     "start": "webpack-dev-server"
   },
   "devDependencies": {
+    "@types/react": "^16.9.9",
+    "@types/react-dom": "^16.9.2",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^6.2.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.1",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2"
+  },
+  "dependencies": {
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
   }
 }
