--- a/packages/chobot-demo/tsconfig.json
+++ b/packages/chobot-demo/tsconfig.json
@@ -4,6 +4,7 @@
     "moduleResolution": "node",
     "target": "es2017",
     "sourceMap": true,
+    "jsx": "react",
     "rootDir": "src",
     "baseUrl": "./",
     "paths": {
@@ -13,7 +14,5 @@
   "references": [
     { "path": "../chobot/tsconfig.lib.esm.json" },
   ],
-  "files": [
-    "src/index.ts"
-  ]
+  "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
