--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
   ],
   "devDependencies": {
     "@types/jest": "^24.0.19",
-    "@zerollup/ts-transform-paths": "^1.7.3",
     "jest": "^24.9.0",
     "lerna": "^3.18.1",
     "prettier": "^1.18.2",
     "ts-jest": "^24.1.0",
     "tslib": "^1.10.0",
-    "typescript": "^3.6.4",
-    "ttypescript": "^1.5.7"
+    "typescript": "^3.6.4"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap"
