--- a/packages/chobot/package.json
+++ b/packages/chobot/package.json
@@ -12,9 +12,11 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "dependencies": {
+    "b2a": "^1.1.2",
     "deep-equal": "^2.0.5"
   },
   "devDependencies": {
+    "@types/b2a": "^1.0.0",
     "@types/deep-equal": "^1.0.1"
   },
   "scripts": {
